fix : change footer width from vw to % to avoid overflow

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -92,7 +92,7 @@ header {
 }
 
 footer {
-    width: 100vw;
+    width: 100%;
     padding: 20px 0;
     text-align: center;
     background: var(--lightBlack);
